applications/gitlab/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-test
spec:
  type: NodePort
  selector:
    app: gitlab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
